# schedule-agent

./: .coverage  .gitignore  .thinindexignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  STATE_TRANSITION_MODEL.md  WI.md  install.sh  pyproject.toml  pytest.ini  uninstall.sh
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-04-18-portability-and-resilience-design.md  2026-04-18-tui-ux-improvements-design.md
prompts/: 0_session-name-prompt.txt  1_ui-prompt_plan.txt  2_ui_prompt_implement.txt  AUTO_CONTINUE_PLAN.md  UI_UPDATE.md
promts/: CLI_UPDATE_PLAN.md
reports/audits/: combined.md
schedule_agent/: cli.py  config.py  display.py  environment.py  execution.py  operations.py  persistence.py  preflight.py  scheduler_backend.py  state_model.py  stream_decoder.py  time_utils.py  transitions.py
schedule_agent/legacy/: __init__.py  cli_state.py  compat.py
schedule_agent/sessions/: __init__.py  discovery.py  git_context.py  jsonl.py  ledger.py  model.py  paths.py  sqlite.py
schedule_agent/sessions/providers/: __init__.py  claude.py  codex.py  common.py
tests/: conftest.py  test_audit_fixes.py  test_cli.py  test_cli_doctor.py  test_cli_external_interaction.py  test_cli_extra.py  test_cli_sessions.py  test_display_helpers.py  test_environment.py  test_execution.py  test_format_job_summary.py  test_operations_extra.py  test_operations_preflight.py  test_overview_rendering.py  test_persistence.py  test_persistence_extra.py  test_preflight.py  test_scheduler_backend.py  test_scheduler_backend_extra.py  test_session_discovery.py  test_state_and_transitions_extra.py  test_state_model.py  test_stream_decoder.py  test_time_utils_extra.py  test_toolbar.py  test_transitions.py  test_ui_prefs.py
